# jetblack-datemath

./: README.md  mypy.ini  pyproject.toml
jetblack_datemath/: __init__.py  arithmetic.py  calendars.py  daterules.py  months.py  weekdays.py
tests/: test_arithmetic.py
