[tool.poetry]
name = "jetblack-datemath"
version = "1.0.1"
description = "Date arithmetic for Python"
authors = ["Rob Blackbourn <rob.blackbourn@googlemail.com>"]
readme = "README.md"
repository = "https://github.com/rob-blackbourn/jetblack-datemath"
packages = [
    { include = "jetblack_datemath" },
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pytest-cov = "^2.8"
pylint = "^2.10.2"
mypy = "^0.910"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"